--- a/package.json
+++ b/package.json
@@ -35,27 +35,51 @@
   ],
   "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.0.14",
-    "@tarojs/runtime": "3.0.14",
-    "@tarojs/taro": "3.0.14",
-    "@tarojs/react": "3.0.14",
-    "react-dom": "^16.10.0",
-    "react": "^16.10.0",
+    "@tarojs/cli": "2.2.6",
+    "@tarojs/components": "2.2.6",
+    "@tarojs/components-qa": "2.2.6",
+    "@tarojs/mini-runner": "2.2.6",
+    "@tarojs/router": "2.2.6",
+    "@tarojs/taro": "2.2.6",
+    "@tarojs/taro-alipay": "2.2.6",
+    "@tarojs/taro-h5": "2.2.6",
+    "@tarojs/taro-qq": "2.2.6",
+    "@tarojs/taro-quickapp": "2.2.6",
+    "@tarojs/taro-rn": "2.2.6",
+    "@tarojs/taro-swan": "2.2.6",
+    "@tarojs/taro-tt": "2.2.6",
+    "@tarojs/taro-weapp": "2.2.6",
+    "@tarojs/webpack-runner": "2.2.6",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.10",
+    "nerv-devtools": "^1.5.5",
+    "nerv-redux": "^1.3.0",
+    "nervjs": "^1.5.5",
     "taro-echarts": "^1.1.2"
   },
   "devDependencies": {
+    "@tarojs/plugin-babel": "2.2.6",
+    "@tarojs/plugin-csso": "2.2.6",
+    "@tarojs/plugin-sass": "2.2.6",
+    "@tarojs/plugin-uglifyjs": "2.2.6",
+    "@tarojs/webpack-runner": "2.2.6",
+    "@types/react": "^16.4.6",
     "@types/webpack-env": "^1.13.6",
-    "@types/react": "^16.0.0",
-    "@tarojs/mini-runner": "3.0.14",
-    "@babel/core": "^7.8.0",
-    "@tarojs/webpack-runner": "3.0.14",
-    "babel-preset-taro": "3.0.14",
-    "eslint-config-taro": "3.0.14",
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.8.2",
+    "babel-eslint": "^8.2.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^5.16.0",
+    "eslint-config-taro": "2.2.6",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "stylelint": "9.3.0"
+    "eslint-plugin-taro": "2.2.6",
+    "stylelint": "9.3.0",
+    "stylelint-config-taro-rn": "2.2.6",
+    "stylelint-taro-rn": "2.2.6"
   }
 }
